feat: 新增业务组件 样式

--- a/examples/shComponentStyle.css
+++ b/examples/shComponentStyle.css
@@ -5,10 +5,73 @@
 
 .cxd-ImageField .cxd-Image {
   border: none;
-  text-align: 'center';
-  color: '#999';
-  width: '100%';
+  text-align: center;
+  color: #999;
+  width: 100%;
 }
+
+/* 按钮 */
+.cxd-Button.cxd-Button--size-default {
+  height: 28px;
+  font-size: 12px;
+  padding: 4px 18px;
+}
+
+.cxd-Button.cxd-Button--default:not(:disabled):not(.is-disabled) {
+  border-color: #eee;
+}
+.cxd-Button.cxd-Button--default:not(:disabled):not(.is-disabled):hover {
+  background: #fafafa;
+  border-color: #eee;
+  color: #333;
+}
+.cxd-Button.cxd-Button--danger:not(:disabled):not(.is-disabled):hover, .cxd-Button.cxd-Button--primary:not(:disabled):not(.is-disabled):hover {
+  background: #F0513E;
+  border-color: #F0513E;
+  color: #fff;
+}
+.cxd-Form .cxd-ButtonToolbar > .cxd-Button {
+  margin-left: 10px;
+}
+
+/* 级联 */
+.cxd-NestedSelectControl {
+  width: 184px;
+  height: 28px;
+}
+.cxd-NestedSelectControl .cxd-NestedSelect-noResult {
+  width: 184px;
+}
+.cxd-NestedSelectControl .cxd-ResultBox {
+  font-size: 12px;
+  padding: 2px 12px;
+  min-height: 28px;
+}
+
+/* select 下拉 */
+.cxd-SelectControl {
+  width: 164px;
+  height: 28px;
+}
+.cxd-SelectControl .cxd-Select {
+  padding: 2px 12px;
+  font-size: 12px;
+  min-height: 28px;
+}
+.cxd-SelectControl .cxd-Select--multi .cxd-Select-valueWrap .cxd-Select-placeholder {
+  margin-left: 0;
+}
+.cxd-Select-valueIcon {
+  display: inline-block !important;
+}
+.cxd-Checkbox > i + span {
+  vertical-align: middle;
+}
+.cxd-Select-arrow svg.icon {
+  color: #ccc;
+}
+
+
 
 /** 空态图片 */
 .cxd-ImageField .cxd-Image--thumb .cxd-Image-thumb {
@@ -20,19 +83,14 @@
 .cxd-ImageField .cxd-Image--thumb .cxd-Image-info {
   width: 100%;
 }
-/* .cxd-ImageField .cxd-Image {
-  border: none;
-  text-align: center;
-  color: #999;
-  width: 100%;
-} */
+
 .cxd-ImageField.amis-card-empty {
-  position: static;
+  position: relative;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-top: 6%;
-  margin-bottom: 9%;
+  transform: translate(-55px, 40px);
+  margin-left: 50%;
 }
 
 /* echarts page 可视化卡片样式设置 */
@@ -49,15 +107,18 @@
 .amis-market-capacity-visual .overview-item-data .unit {
   font-size: 12px;
 }
-.amis-market-capacity-visual .cxd-Panel.amis-market-capacity-flex-item {
-  width: 49.6%;
-}
-.amis-market-capacity-visual .cxd-Chart.amis-market-capacity-flex-item {
+
+.amis-market-capacity-visual .amis-market-capacity-flex-item {
   min-height: 248px;
 }
 .amis-market-capacity-visual .market-capacity-overview {
   padding-bottom: 10px;
 }
-.amis-market-capacity-visual .amis-market-capacity-flex-item.cxd-Panel .cxd-Panel-body {
+.amis-market-capacity-visual .amis-market-capacity-flex-item .cxd-Panel-body {
   min-height: 260px;
+}
+
+/* 自定义指标 多选 */
+.cxd-CheckboxesControl.is-inline .cxd-Checkbox {
+  display: block !important;
 }
